fix blocked audio icon alignment

--- a/ui/theme.css
+++ b/ui/theme.css
@@ -525,10 +525,11 @@ tab[selected]:-moz-window-inactive {
 }
 
 /* Put tab close button and icon sound to the right  */
-.tab-icon-sound[soundplaying="true"], .tab-icon-sound[muted="true"] {
+.tab-icon-sound[soundplaying="true"], .tab-icon-sound[muted="true"],
+.tab-icon-sound[activemedia-blocked="true"] {
 	margin-left: auto !important;
 }
-.tabbrowser-tab:not([soundplaying]):not([muted]) .tab-close-button {
+.tabbrowser-tab:not([soundplaying]):not([muted]):not([activemedia-blocked]) .tab-close-button {
 	margin-left: auto !important;
 }
 
@@ -542,7 +543,7 @@ tab[selected]:-moz-window-inactive {
 
 /* If tab favicon is not present, force tab label to the center */
 .tabbrowser-tab .tab-label-container {
-	margin-left: 0px !important;
+	margin-left: 0 !important;
 }
 .tabbrowser-tab:not([image]):not([busy]):not([progress]) .tab-label-container {
 	margin-left: auto !important;
